# ealayer3-nfsw

./: .hgignore  CMakeLists.txt  README.md  license.txt  mpg123license.txt
docs/: Build Options.txt  EA Layer 3.txt  Small Header Version 7.txt
src/: AllFormats.cpp  AllFormats.h  Bitstream.h  BlockLoader.cpp  BlockLoader.h  BlockWriter.cpp  BlockWriter.h  FileDecoder.cpp  FileDecoder.h  FormatSelector.h  Generator.cpp  Generator.h  Internal.h  Main.cpp  MpegGenerator.cpp  MpegGenerator.h  MpegOutputStream.cpp  MpegOutputStream.h  MpegParser.cpp  MpegParser.h  MyStdInt.h  OutputStream.cpp  OutputStream.h  Parser.cpp  Parser.h  PcmOutputStream.cpp  PcmOutputStream.h  TestDriver.cpp  Version.h.in  WaveWriter.cpp  WaveWriter.h
src/Loaders/: AsfGstrLoader.cpp  AsfGstrLoader.h  AsfPtLoader.cpp  AsfPtLoader.h  HeaderBLoader.cpp  HeaderBLoader.h  HeaderlessLoader.cpp  HeaderlessLoader.h  SCxLoader.cpp  SCxLoader.h  SingleBlockLoader.cpp  SingleBlockLoader.h
src/Parsers/: Internal.h  ParserForSCx.cpp  ParserForSCx.h  ParserVersion6.cpp  ParserVersion6.h
src/Writers/: HeaderBWriter.cpp  HeaderBWriter.h  HeaderlessWriter.cpp  HeaderlessWriter.h  SingleBlockWriter.cpp  SingleBlockWriter.h
win32/: libmpg123-0.def
